--- a/style.css
+++ b/style.css
@@ -40,34 +40,216 @@
     min-height: 180px;
     clear: both;
 }
+
 .red-menu {
     background-color: darkred;
     width: 25%;
     min-height: 150px;
     float: left;
 }
+
 .orange-menu {
     background-color: orange;
     width: 25%;
     min-height: 150px;
     float: left;
 }
+
 .blue-menu {
     background-color: blue;
     width: 25%;
     min-height: 150px;
     float: left;
 }
+
 .yellow-menu {
     background-color: yellow;
     width: 25%;
     min-height: 150px;
     float: left;
 }
+
 .menu-text{
     clear: both;
     text-align: center;
 }
+
 .clear{
+    clear: both;
+}
+
+.left-block{
+    background-color: darkgreen;
+    width: 33.33%;
+    height: 450px;
+    float: left;
+}
+.left-text{
+    text-align: center;
+    background-color: darkgreen;
+    padding-bottom: 25px    ;
+}
+
+.left {
+    background-color: orange;
+    width: 80%;
+    height: 85%;
+    margin: 0 auto;
+
+}
+.text-left-box{
+    text-align: center;
+    background-color: orange;
+    padding-bottom: 25px;
+}
+
+.a-left{
+    background-color: pink;
+    width: 50%;
+    height: 89.5%;
+    float: left;
+
+}
+.text-a-left{
+    text-align: center;
+    background-color: pink;
+    padding-bottom: 25px;
+}
+
+.b-left{
+    background-color: yellow;
+    width: 50%;
+    height: 89.5%;
+    float: left;
+
+}
+
+.text-b-left {
+    text-align: center;
+    background-color: yellow;
+    padding-bottom: 25px;
+}
+
+.center-block{
+    background-color: aqua;
+    width: 33.33%;
+    height: 450px;
+    float: left;
+}
+
+.center-block-text{
+    text-align: center;
+    background-color: aqua;
+    padding-bottom: 25px;
+}
+
+.center-left{
+    background-color: red;
+    width: 33.33%;
+    height: 91%;
+    float: left;
+}
+.ac-center{
+    background-color: yellow;
+    text-align: center;
+    padding-bottom: 25px;
+    width: 33.33%;
+    height: 91%;
+    float: left;
+}
+
+.a-center{
+    text-align: center;
+    background-color: yellow;
+    padding-bottom: 25px;
+}
+
+.a-c{
+    width: 50%;
+    height: 96%;
+    background-color: orange;
+    float: left;
+}
+
+.b-c{
+    width: 50%;
+    height: 60%;
+    background-color: red;
+    margin-top: 138px;
+    float: left;
+}
+
+.center-right{
+    background-color: orange;
+    width: 33.33%;
+    height: 91%;
+    float: left;
+}
+
+.right-block{
+    background-color: darkblue;
+    width: 33.33%;
+    height: 450px;
+    float: left;
+}
+
+.right-text{
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.right-a{
+    width: 33.33%;
+    height: 33.33%;
+    float: left;
+    background-color: aqua;
+    margin-top: 170px;
+}
+
+.right-b{
+    width: 33.33%;
+    height: 33.33%;
+    float: left;
+    background-color: yellow;
+    margin-top: 120px;
+}
+
+.right-c{
+    width: 33.33%;
+    height: 33.33%;
+    float: left;
+    background-color: orange;
+    margin-top: 60px;
+}
+.text-left{
+
+    background-color: black;
+    color: aqua;
+    font-size: 35px;
+    margin-top: 80px;
+    float: left;
+}
+
+.text-right{
+    background-color: black;
+    color: aqua;
+    font-size: 35px;
+    margin-top: 30px;
+    float: right;
+}
+
+footer{
+    clear: both;
+    background-color: black;
+    width: 100%;
+    height: 100px;
+}
+.footer{
+    text-align: center;
+    padding-bottom: 20px;
+    color: white;
+}
+
+.clear {
     clear: both;
 }
